fix screen flickering and burget width

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,6 +1,6 @@
 .navbarContainer {
     background: black;
-    height: 8%;
+    height: 12%;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 1);
 }
 
