--- a/src/components/Projects/index.css
+++ b/src/components/Projects/index.css
@@ -11,9 +11,3 @@
     margin: 40% 30% 30% 40%;
     transform: scale(1.5);
 }
-
-@media only screen and (max-width: 1170px) {
-    .vertical-timeline-element-date {
-        display: none !important;
-    }
-}
